create report dashboard api and modify reporter side my news api
